# blog

./: .gitignore  README.md  skills-lock.json
.github/workflows/: ci.yml
apps/api/: .gitignore  .sqlfluff  Cargo.toml  README.md  package.json  pnpm-lock.yaml  rustfmt.toml  wrangler.toml
apps/api/.cargo/: config.toml
apps/api/admin/: Cargo.toml  package.json  wrangler.toml
apps/api/admin/src/: lib.rs
apps/api/admin/src/auth/: firebase.rs  mod.rs  session.rs
apps/api/core/: Cargo.toml
apps/api/core/src/: db.rs  dto.rs  lib.rs  validation.rs
apps/api/migrations/: 0001_init.sql  0002_add_public_id.sql
apps/api/public/: Cargo.toml  package.json  wrangler.toml
apps/api/public/src/: lib.rs
apps/api/scripts/: check-bindings.mts  validate-deploy-config.mts
apps/api/src/: auth.rs  db.rs  dto.rs  lib.rs  validation.rs
apps/api/src/auth/: firebase.rs  mod.rs  session.rs
apps/site/: .gitignore  README.md  eleventy.config.js  package.json  pnpm-lock.yaml  tsconfig.json
apps/site/scripts/: build-browser-modules.mts  check-fetch-fixture.mts  check-render-fixture.mts  clean-generated.mts  fetch-posts.mts  fixture-utils.mts  seed-showcase.sql
apps/site/src/: _headers  index.njk  posts.11tydata.js
apps/site/src/_data/: runtime.js  site.json
apps/site/src/_includes/: base.njk  post.njk  redirect.njk
apps/site/src/admin/: index.njk
apps/site/src/api-types/: CreatePost.ts  Post.ts  PostStatus.ts  PostSummary.ts  UpdatePost.ts
apps/site/src/css/: admin.css  base.css  site.css  style.css
apps/site/src/js/: admin-auth.mts
apps/site/src/types/: asciidoctor-core.d.ts  firebase-web-sdk.d.ts
scripts/: check-all.sh
