[workspace]
members = ["public", "core", "admin"]
resolver = "3"

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.dependencies]
blog-api-core = { path = "core" }
worker = { version = "0.8", features = ["http", "d1"] }
axum = { version = "0.8", default-features = false, features = ["json", "query"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-service = "0.3"
getrandom = { version = "0.2", features = ["js"] }
uuid = { version = "1", features = ["v4", "serde", "js"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
ts-rs = { version = "12", features = ["chrono-impl"] }
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
subtle = "2"
