[package]
name = "blog-api-admin"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
blog-api-core.workspace = true
worker.workspace = true
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tower-service.workspace = true
getrandom.workspace = true
uuid.workspace = true
jsonwebtoken.workspace = true
subtle.workspace = true
