[package]
name = "blog-api-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
crate-type = ["rlib"]

[dependencies]
worker.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
getrandom.workspace = true
uuid.workspace = true
ts-rs.workspace = true
